--- a/2018-04-25-MediaCarousel/sql-server--sql-server-2017-features.html
+++ b/2018-04-25-MediaCarousel/sql-server--sql-server-2017-features.html
@@ -1,9 +1,7 @@
 <mscom:contentinclude ajaxrendered="false" controltheme="default" instancename="SQL_IpTag_Script" md:pageid="e19abcfe-7cfd-4fae-929b-eff94bbe035d"></mscom:contentinclude>
 <div class="hide" data-pagename="sql-server-2017-features"></div>
 <div class="row">
-	<div class="col-1-1">
-		<mscom:viewinclude controltheme="default" usealternatedelimiters="false" instancename="SQL_StaticSupportLinks_1_VG" md:viewgroupguid="80807cd4-602c-49e2-841e-e1f7867bdbc6"></mscom:viewinclude>
-	</div>
+	<div class="col-1-1"> <mscom:viewinclude controltheme="default" usealternatedelimiters="false" instancename="SQL_StaticSupportLinks_1_VG" md:viewgroupguid="80807cd4-602c-49e2-841e-e1f7867bdbc6"></mscom:viewinclude> </div>
 </div>
 <div class="row">
 	<div class="col-1-1 no-padding">
