added MWF base files for reference and small format change to html file

--- a/2018-04-25-MediaCarousel/SQL_MediaCarouselWithFrames_1_M.html
+++ b/2018-04-25-MediaCarousel/SQL_MediaCarouselWithFrames_1_M.html
@@ -24,16 +24,20 @@ data-disable="true" data-tag="tagging" data-auto-play="{{data-auto-play}}" data-
 							<source class='hide-by-default show-element' srcset='{{carousel_prev-Min-1084px}}' media='(min-width:1084px)'></source>
 							<source class='hide-by-default show-element' srcset='{{carousel_prev-Min-768px}}' media='(min-width:768px)'></source>
 							<source class='hide-by-default show-element' srcset='{{carousel_prev}}' media='(min-width:540px)'></source>
-							<source class='hide-by-default show-element' srcset='{{carousel_prev}}' media='(min-width:0)'></source><img tabindex="0" srcset='{{carousel_prev}}' class="carousel-button carousel-prev" data-desktop-class="carousel-button carousel-prev"
-							md:payloadguid="{{carousel_prev}}" alt="{{carousel_prev_alt}}" src="{{carousel_prev}}" title="previous"></picture>
+							<source class='hide-by-default show-element' srcset='{{carousel_prev}}' media='(min-width:0)'></source>
+							<img tabindex="0" srcset='{{carousel_prev}}' class="carousel-button carousel-prev" data-desktop-class="carousel-button carousel-prev"
+							md:payloadguid="{{carousel_prev}}" alt="{{carousel_prev_alt}}" src="{{carousel_prev}}" title="previous">
+						</picture>
 						<picture>
 							<source class='hide-by-default show-element' srcset='{{carousel_next-Min-1779px}}' media='(min-width:1779px)'></source>
 							<source class='hide-by-default show-element' srcset='{{carousel_next-Min-1400px}}' media='(min-width:1400px)'></source>
 							<source class='hide-by-default show-element' srcset='{{carousel_next-Min-1084px}}' media='(min-width:1084px)'></source>
 							<source class='hide-by-default show-element' srcset='{{carousel_next-Min-768px}}' media='(min-width:768px)'></source>
 							<source class='hide-by-default show-element' srcset='{{carousel_next}}' media='(min-width:540px)'></source>
-							<source class='hide-by-default show-element' srcset='{{carousel_next}}' media='(min-width:0)'></source><img tabindex="0" srcset='{{carousel_next}}' class="carousel-button carousel-next" data-desktop-class="carousel-button carousel-next"
-							md:payloadguid="{{carousel_next}}" alt="{{carousel_next_alt}}" src="{{carousel_next}}" title="next"></picture>
+							<source class='hide-by-default show-element' srcset='{{carousel_next}}' media='(min-width:0)'></source>
+							<img tabindex="0" srcset='{{carousel_next}}' class="carousel-button carousel-next" data-desktop-class="carousel-button carousel-next"
+							md:payloadguid="{{carousel_next}}" alt="{{carousel_next_alt}}" src="{{carousel_next}}" title="next">
+						</picture>
 					</div>
 					<input type="hidden" value="{{play_button_image}}">
 					<input type="hidden" value="{{play_button_image_alt}}">
