--- a/Dyn365/dynamics365--relationship-sales-demo.html
+++ b/Dyn365/dynamics365--relationship-sales-demo.html
@@ -71,8 +71,22 @@ https://picsum.photos/1050/600?image=200
 		border: 1px solid #fff;
     } */
 
+	#videoFrame {
+		position: absolute;
+		top: 0px;
+		left: 0px;
+		z-index: -1;
+	}
+	
+
 	.f-video-trigger {
-		padding-top: 25%;
+		position: absolute;
+		top: 45%;
+		-webkit-transform: translateY(-50%);
+		transform: translateY(-50%);
+		left: 50%;
+		-webkit-transform: translateX(-50%);
+		transform: translateX(-50%)
 	}
 
 	.f-video-trigger button.c-action-trigger-365 {
@@ -151,17 +165,14 @@ https://picsum.photos/1050/600?image=200
 	}
 
 	.videoplyr {
+		position: relative;
 		width: 68% !important;
 		float: left;
 	}
 
-	#videoFrame {
-		display: none;
-	}
-
 	.videoplyr .videocontainer {
 		width: 100%;
-		height: auto;
+		height: 100%;
 		border: 20px solid #fff;
 	}
 
@@ -171,8 +182,10 @@ https://picsum.photos/1050/600?image=200
 		padding-right: 0px !important;
 	}
 
-	.m-multi-feature.f-align-left>section,
-	.m-multi-feature.f-align-right>section {
+	.m-multi-feature.f-align-left&gt;
+	section,
+	.m-multi-feature.f-align-right&gt;
+	section {
 		align-items: normal !important;
 	}
 
@@ -217,7 +230,9 @@ https://picsum.photos/1050/600?image=200
 		padding-right: 0;
 	}
 
-	.d365-sem-wrapper .m-multi-feature.f-align-left>section>div div.thumbnail-ul-holder [role=tablist] li div.arrow-border {
+	.d365-sem-wrapper .m-multi-feature.f-align-left&gt;
+	section&gt;
+	div div.thumbnail-ul-holder [role=tablist] li div.arrow-border {
 		width: 0;
 		height: 0;
 		border-left: 10px solid transparent;
@@ -228,7 +243,9 @@ https://picsum.photos/1050/600?image=200
 		display: inline-block;
 	}
 
-	.d365-sem-wrapper .m-multi-feature.f-align-left>section>div div.thumbnail-ul-holder [role=tablist] li div.off-arrow-border {
+	.d365-sem-wrapper .m-multi-feature.f-align-left&gt;
+	section&gt;
+	div div.thumbnail-ul-holder [role=tablist] li div.off-arrow-border {
 		width: 0;
 		height: 0;
 		border-left: 10px solid transparent;
@@ -239,7 +256,9 @@ https://picsum.photos/1050/600?image=200
 		display: inline-block;
 	}
 
-	.d365-sem-wrapper .m-hero-item.f-x-center>div>div {
+	.d365-sem-wrapper .m-hero-item.f-x-center&gt;
+	div&gt;
+	div {
 		top: 3%;
 	}
 
@@ -256,8 +275,12 @@ https://picsum.photos/1050/600?image=200
 		color: #000000;
 	}
 
-	.d365-sem-wrapper .c-hero.f-x-center>div>div,
-	.m-hero-item.f-x-center>div>div {
+	.d365-sem-wrapper .c-hero.f-x-center&gt;
+	div&gt;
+	div,
+	.m-hero-item.f-x-center&gt;
+	div&gt;
+	div {
 		min-width: 100%;
 	}
 
@@ -345,14 +368,18 @@ https://picsum.photos/1050/600?image=200
 		outline: none !important;
 	}
 
-	.d365-sem-wrapper .m-multi-feature.f-align-left>section>div.c-carousel {
+	.d365-sem-wrapper .m-multi-feature.f-align-left&gt;
+	section&gt;
+	div.c-carousel {
 		position: relative;
 		left: 10%;
 		transform: translateY(-27%);
 		border: 20px solid #fff;
 	}
 
-	.d365-sem-wrapper .m-multi-feature.f-align-left>section>div div.thumbnail-ul-holder {
+	.d365-sem-wrapper .m-multi-feature.f-align-left&gt;
+	section&gt;
+	div div.thumbnail-ul-holder {
 		position: relative;
 		top: 417px;
 		/*right: 597px;*/
@@ -362,25 +389,35 @@ https://picsum.photos/1050/600?image=200
 		width: 100%;
 	}
 
-	.d365-sem-wrapper .m-multi-feature.f-align-left>section>div div.thumbnail-ul-holder [role=tablist] {
+	.d365-sem-wrapper .m-multi-feature.f-align-left&gt;
+	section&gt;
+	div div.thumbnail-ul-holder [role=tablist] {
 		width: 100%;
 		margin: 0 auto;
 	}
 
-	.d365-sem-wrapper .m-multi-feature.f-align-left>section>div div.thumbnail-ul-holder [role=tablist] li {
+	.d365-sem-wrapper .m-multi-feature.f-align-left&gt;
+	section&gt;
+	div div.thumbnail-ul-holder [role=tablist] li {
 		width: 120px;
 		height: 130px;
 	}
 
-	.d365-sem-wrapper .m-multi-feature.f-align-left>section>div div.thumbnail-ul-holder [role=tablist] li span {
+	.d365-sem-wrapper .m-multi-feature.f-align-left&gt;
+	section&gt;
+	div div.thumbnail-ul-holder [role=tablist] li span {
 		display: block;
 	}
 
-	.d365-sem-wrapper .m-multi-feature.f-align-left>section>div div.thumbnail-ul-holder [role=tablist] li:last-child {
+	.d365-sem-wrapper .m-multi-feature.f-align-left&gt;
+	section&gt;
+	div div.thumbnail-ul-holder [role=tablist] li:last-child {
 		margin-right: 0;
 	}
 
-	.d365-sem-wrapper .m-multi-feature.f-align-left>section>div div.thumbnail-ul-holder ul.video-thumbnail-ul [role=tablist] li:last-child {
+	.d365-sem-wrapper .m-multi-feature.f-align-left&gt;
+	section&gt;
+	div div.thumbnail-ul-holder ul.video-thumbnail-ul [role=tablist] li:last-child {
 		margin-right: 0 !important;
 	}
 
@@ -468,12 +505,12 @@ https://picsum.photos/1050/600?image=200
 		height: 100%;
 	}
 
-	div[data-frame="frame1"] {
-		background-image: url("https://picsum.photos/1050/600?image=50");
+	/* div[data-frame="frame1"] {
+		background-image: url(");
 		width: 100%;
 		height: 100%;
 		background-repeat: no-repeat;
-	}
+	} */
 
 	div[data-frame="frame2"] {
 		background-image: url("https://picsum.photos/1050/600?image=60");
@@ -521,16 +558,23 @@ https://picsum.photos/1050/600?image=200
 		margin-top: 5%;
 	}
 
-	.d365-sem-wrapper .m-multi-feature.f-align-left>section>div div.thumbnail-ul-holder [role=tablist] li.active-border {
+	.d365-sem-wrapper .m-multi-feature.f-align-left&gt;
+	section&gt;
+	div div.thumbnail-ul-holder [role=tablist] li.active-border {
 		border: 8px solid #05b5c1;
 		margin: 0 5px;
 	}
 
-	.d365-sem-wrapper .m-multi-feature.f-align-left>section>div div.thumbnail-ul-holder [role=tablist] li.inactive-border {
+	.d365-sem-wrapper .m-multi-feature.f-align-left&gt;
+	section&gt;
+	div div.thumbnail-ul-holder [role=tablist] li.inactive-border {
 		border: 8px solid #fff;
 	}
 
-	.d365-sem-wrapper .m-multi-feature.f-align-left>section>div>ul.video-thumbnail-ul [role=tablist] {
+	.d365-sem-wrapper .m-multi-feature.f-align-left&gt;
+	section&gt;
+	div&gt;
+	ul.video-thumbnail-ul [role=tablist] {
 		justify-content: center;
 		text-align: center;
 	}
@@ -863,7 +907,8 @@ https://picsum.photos/1050/600?image=200
 	}
 
 	@media only screen and (min-width:1083px) and (max-width: 1180px) {
-		.m-hero-item>picture img {
+		.m-hero-item&gt;
+		picture img {
 			position: absolute;
 			width: 100%;
 			left: 0;
@@ -879,15 +924,17 @@ https://picsum.photos/1050/600?image=200
 		.d365-sem-wrapper .m-multi-feature.f-align-left section div ul.video-dynamic-info {
 			height: auto !important;
 		}
-		.m-multi-feature.f-align-left>section>div {
+		.m-multi-feature.f-align-left&gt;
+		section&gt;
+		div {
 			margin-top: -5px;
 		}
 		.d365-sem-wrapper .d365-3column-form {
 			height: 0;
 		}
-		.custom-d365-c-show {
-			/*margin-top: -11%;*/
-		}
+		/* .custom-d365-c-show {
+			margin-top: -11%;
+		} */
 		.d365-sem-wrapper .m-multi-feature.f-align-left section div ul.video-dynamic-info li {
 			margin-top: 0 !important;
 		}
@@ -991,7 +1038,8 @@ https://picsum.photos/1050/600?image=200
 		.d365-sem-wrapper hr.custom-divider {
 			display: none;
 		}
-		.m-multi-feature [role=tablist] li>a.f-active .c-image {
+		.m-multi-feature [role=tablist] li&gt;
+		a.f-active .c-image {
 			display: inline-block;
 		}
 		.d365-sem-wrapper .m-multi-feature.f-align-left section div ul.video-dynamic-info li .dyn-img {
@@ -1073,10 +1121,14 @@ https://picsum.photos/1050/600?image=200
 			color: #000000;
 			/*font-size: 24px;*/
 		}
-		.d365-sem-wrapper .m-multi-feature.f-align-left>section>div.c-carousel {
+		.d365-sem-wrapper .m-multi-feature.f-align-left&gt;
+		section&gt;
+		div.c-carousel {
 			margin-left: -4%;
 		}
-		.d365-sem-wrapper .m-multi-feature.f-align-left>section>div {
+		.d365-sem-wrapper .m-multi-feature.f-align-left&gt;
+		section&gt;
+		div {
 			margin-left: 0 !important;
 		}
 		.d365-sem-wrapper .video-thumbnail-ul li {
@@ -1392,15 +1444,18 @@ https://picsum.photos/1050/600?image=200
 			margin-top: 0;
 		}
 	}
-</style>
 
+
+	#frameImagekey {
+		width: 100%;
+		height: 100%;
+	}
+</style>
 <script>
 	$(document).ready(function () {
 		console.log("working");
 	});
 </script>
-
-
 <div class="d365-sem-wrapper" data-grid="container">
 	<section class="m-hero-item f-x-center f-y-top context-article theme-light set-bg" itemscope="" itemtype="http://schema.org/Article">
 		<!-- <picture>
@@ -1424,7 +1479,8 @@ https://picsum.photos/1050/600?image=200
 		</div>
 		<section class="video-container">
 			<div class="videoplyr c-carousel f-multi-slide" role="region" aria-label="Images">
-				<div id="videoFrameStart" data-frame="frame1">
+				<div id="videoFrameStart" class="videocontainer" data-frame="frame1">
+					<img src="https://picsum.photos/1050/600?image=50" id="frameImagekey">
 					<div class="f-video-trigger" aria-hidden="false">
 						<button class="c-action-trigger-365 c-glyph glyph-play x-hidden-focus" aria-label="Play">
 							<span class="x-screen-reader">Play</span>
@@ -1579,7 +1635,6 @@ https://picsum.photos/1050/600?image=200
 						<a href="#" id="grow-business" role="tab" class="mscom-link c-logo f-active" itemprop="url" aria-label="Watch the Grow your business faster with Microsoft Relationship Sales video"
 						 aria-controls="newHorizontalItemContent1 newHorizontalItemImage1" videosrc="https://www.microsoft.com/en-us/videoplayer/embed/RE1W5Dk?autoplay=false">
 							<div class="arrow-border_on"></div>
-
 							<img srcset="//img-prod-cms-rt-microsoft-com.akamaized.net/cms/api/am/imageFileData/RE1Whud?ver=93df" src="//img-prod-cms-rt-microsoft-com.akamaized.net/cms/api/am/imageFileData/RE1Whud?ver=93df"
 							 alt="Grow Business"></img>
 						</a>
@@ -1592,11 +1647,9 @@ https://picsum.photos/1050/600?image=200
 							<div class="arrow-border_off"></div>
 							<img srcset="//img-prod-cms-rt-microsoft-com.akamaized.net/cms/api/am/imageFileData/RE1Whuj?ver=dfee" src="//img-prod-cms-rt-microsoft-com.akamaized.net/cms/api/am/imageFileData/RE1Whuj?ver=dfee"
 							 alt="Stay Focused"></img>
-
 						</a>
 						<span class="normal-font">STAY FOCUSED</span>
 					</li>
-
 					<!-- <li id="img2" class="c-glyph inactive-border" role="presentation">
 						<a href="#" id="stay-focus" role="tab" class="mscom-link c-logo" itemprop="url" aria-label="Watch the Stay Focused with Microsoft Relationship Sales video"
 						 aria-controls="newHorizontalItemContent2 newHorizontalItemImage2" videosrc="https://www.microsoft.com/en-us/videoplayer/embed/RE1VVbF?autoplay=false">
@@ -1607,13 +1660,10 @@ https://picsum.photos/1050/600?image=200
 						</a>
 						<span class="normal-font">STAY FOCUSED</span>
                     </li> -->
-
-
 					<li id="img3" class="c-glyph inactive-border" role="presentation">
 						<a href="#" id="linkedin" role="tab" class="mscom-link c-logo" itemprop="url" aria-label="Watch the Identify leads using LinkedIn with Microsoft Relationship Sales video"
 						 aria-controls="newHorizontalItemContent3 newHorizontalItemImage3" videosrc="https://www.microsoft.com/en-us/videoplayer/embed/RE1Wds7?autoplay=false">
 							<div class="arrow-border_off"></div>
-
 							<img srcset="//img-prod-cms-rt-microsoft-com.akamaized.net/cms/api/am/imageFileData/RE1WyeG?ver=7464" src="//img-prod-cms-rt-microsoft-com.akamaized.net/cms/api/am/imageFileData/RE1WyeG?ver=7464"
 							 alt="Win Faster"></img>
 						</a>
@@ -1642,13 +1692,10 @@ https://picsum.photos/1050/600?image=200
 			</div>
 		</section>
 	</div>
-
 	<div data-grid="container">
 		<!--<hr class="c-divider custom-divider">-->
 	</div>
-
 	<div data-grid="container" class="d365-3column-form" id="d365_3column_form" style="height:0px;">
-
 		<div class="context-3col-chat m-content-placement d365-c-show custom-d365-c-show" data-grid="col-12">
 			<div class="custom-hr-divider"></div>
 			<div data-grid="col-12 stack-2" class="flex-banner">
@@ -1658,30 +1705,29 @@ https://picsum.photos/1050/600?image=200
 							<div class="icon-container">
 								<mscom:image classoverride="c-image" payloadguid="2dddee7a-7219-424e-9df8-d406ad51afa8" alt="chat-icon"></mscom:image>
 							</div>
-							<h2 class="c-heading-4 f-lean" style="height:52px;">Chat with us</h2>
 							<!--<p class="c-paragraph-4" data-equal-height="3col-chat-p">Available Monday-Friday
                                                 <br>8 AM to 5 PM Central Time.
                                           </p>-->
+							<h2 class="c-heading-4 f-lean" style="height:52px;">Chat with us</h2>
+
 							<p class="c-paragraph-4" style="height:52px;">Available Monday-Friday
 								<br>8 AM to 5 PM Central Time.
 							</p>
 							<div id="lpChatDynamics" style="padding-left: 20px;"></div>
 						</section>
 					</div>
-
-
 				</div>
 				<div data-grid="col-4 pad-6x">
 					<div data-grid="col-12">
 						<section class="m-content-placement-item f-precise-click f-size-medium x-type-center">
 							<div class="icon-container">
 								<mscom:image classoverride="c-image" payloadguid="2243aa0d-b56b-419a-add0-5c9f4e7c1a62" alt="phone-icon"></mscom:image>
-
 							</div>
-							<h2 class="c-heading-4 f-lean" style="height:52px;">Call us</h2>
 							<!--<p class="c-paragraph-4" data-equal-height="3col-chat-p" x-ms-format-detection="none">Available Monday-Friday
                                                 <br>8 AM to 5 PM Central Time.
                                           </p>-->
+							<h2 class="c-heading-4 f-lean" style="height:52px;">Call us</h2>
+
 							<p class="c-paragraph-4" style="height:52px;" x-ms-format-detection="none">Available Monday-Friday
 								<br>8 AM to 5 PM Central Time.
 							</p>
@@ -1700,8 +1746,9 @@ https://picsum.photos/1050/600?image=200
 							<div class="icon-container">
 								<mscom:image classoverride="c-image" payloadguid="1e83ac24-72fc-4446-9270-a07e50c4e0ca" alt="contact-icon"></mscom:image>
 							</div>
-							<h2 class="c-heading-4 f-lean" style="height:52px;">Request we contact you</h2>
 							<!--<p class="c-paragraph-4" data-equal-height="3col-chat-p">Have a Dynamics 365 expert contact you.</p>-->
+							<h2 class="c-heading-4 f-lean" style="height:52px;">Request we contact you</h2>
+
 							<p class="c-paragraph-4" style="height:52px;">Have a Dynamics 365 expert contact you.</p>
 							<mscom:link id="see_pricing_cta" classoverride="c-call-to-action c-glyph" md:payloadguid="5af8664b-e613-4f5a-ab3e-48066f04acdf"
 							 htmlcustomattributes="{'aria-label':'Send a request to have a Dynamics 365 specialist contact you'}">
@@ -1714,9 +1761,12 @@ https://picsum.photos/1050/600?image=200
 		</div>
 	</div>
 </div>
+<!-- <mscom:image classoverride="c-image f-pad-vertical-6x" payloadguid="04bdad88-59f4-438d-ad9f-3480a3614bcb" alt="chat-icon"></mscom:image> -->
 <section data-grid="container">
 	<hr class="c-divider mob-custom-divider">
 </section>
+
+
 
 <div class="foot-note-div theme-light">
 	<section data-grid="container" class="footnote-container">
@@ -1729,5 +1779,4 @@ https://picsum.photos/1050/600?image=200
 		</p>
 	</section>
 </div>
-
 <mscom:contentinclude md:pageid="09aef1c6-f07d-4f29-9de2-ed0788379e6b" ajaxrendered="false"></mscom:contentinclude>
