--- a/Dyn365/dynamics365--relationship-sales-demo.html
+++ b/Dyn365/dynamics365--relationship-sales-demo.html
@@ -75,9 +75,22 @@ https://picsum.photos/1050/600?image=200
 		position: absolute;
 		top: 0px;
 		left: 0px;
+	}
+
+	.videoIndexHide {
 		z-index: -1;
 	}
-	
+
+	.hide {
+		opacity: 0;
+		transition-delay: 2s;
+	}
+
+	.videoIndex {
+		z-index: 0;
+		transition-delay: 1s;
+	}
+
 
 	.f-video-trigger {
 		position: absolute;
@@ -1487,7 +1500,7 @@ https://picsum.photos/1050/600?image=200
 						</button>
 					</div>
 				</div>
-				<div id="videoFrame" class="videocontainer" itemscope="" itemtype="http://schema.org/ItemList">
+				<div id="videoFrame" class="videocontainer videoIndexHide" itemscope="" itemtype="http://schema.org/ItemList">
 					<div id="newHorizontalItemImage1" data-f-theme="light" class="f-active" role="tabpanel" video-id="RE1W5Dk">
 						<iframe src="https://www.microsoft.com/en-us/videoplayer/embed/RE1W5Dk?autoplay=false" tabindex="0" class="custom-oneplayer-iframe"
 						 id="custom_oneplayer_iframe" allowfullscreen="true" frameborder="0" scrolling="no" style="width: 100%; height: 100%;"
