added aria-label to carousel arrows - tested well

--- a/2018-04-25-MediaCarousel/SQL_MediaCarouselWithFrames_1_M.html
+++ b/2018-04-25-MediaCarousel/SQL_MediaCarouselWithFrames_1_M.html
@@ -346,8 +346,8 @@
 					</div>
 
 					<div class="carousel-navigation">
-						<button class="carousel-button carousel-prev mediaCarNavArrows">&nbsp;</button>
-						<button class="carousel-button carousel-next mediaCarNavArrows">&nbsp;</button>
+						<button class="carousel-button carousel-prev mediaCarNavArrows" title="previous" aria-label="View previous slide">&nbsp;</button>
+						<button class="carousel-button carousel-next mediaCarNavArrows" title="next" aria-label="View next slide">&nbsp;</button>
 
 						<!-- <picture>
 							<source class='hide-by-default show-element' srcset='{{carousel_prev-Min-1779px}}' media='(min-width:1779px)'></source>
