last push wasn't saved - Only Firefox not tabbing properly

--- a/2018-04-25-MediaCarousel/SQL_MediaCarouselWithFrames_1_M.html
+++ b/2018-04-25-MediaCarousel/SQL_MediaCarouselWithFrames_1_M.html
@@ -17,27 +17,28 @@
 
 				<div class="carousel-with-frames">
 					<div class="carousel-navigation">
-
-						<picture>
-							<source class='hide-by-default show-element' srcset='{{carousel_prev-Min-1779px}}' media='(min-width:1779px)'></source>
-							<source class='hide-by-default show-element' srcset='{{carousel_prev-Min-1400px}}' media='(min-width:1400px)'></source>
-							<source class='hide-by-default show-element' srcset='{{carousel_prev-Min-1084px}}' media='(min-width:1084px)'></source>
-							<source class='hide-by-default show-element' srcset='{{carousel_prev-Min-768px}}' media='(min-width:768px)'></source>
-							<source class='hide-by-default show-element' srcset='{{carousel_prev}}' media='(min-width:540px)'></source>
-							<source class='hide-by-default show-element' srcset='{{carousel_prev}}' media='(min-width:0)'></source>
-							<img tabindex="0" srcset='{{carousel_prev}}' class="carousel-button carousel-prev" data-desktop-class="carousel-button carousel-prev"
-							 md:payloadguid="{{carousel_prev}}" alt="{{carousel_prev_alt}}" src="{{carousel_prev}}" title="previous">
-						</picture>
-						<picture>
-							<source class='hide-by-default show-element' srcset='{{carousel_next-Min-1779px}}' media='(min-width:1779px)'></source>
-							<source class='hide-by-default show-element' srcset='{{carousel_next-Min-1400px}}' media='(min-width:1400px)'></source>
-							<source class='hide-by-default show-element' srcset='{{carousel_next-Min-1084px}}' media='(min-width:1084px)'></source>
-							<source class='hide-by-default show-element' srcset='{{carousel_next-Min-768px}}' media='(min-width:768px)'></source>
-							<source class='hide-by-default show-element' srcset='{{carousel_next}}' media='(min-width:540px)'></source>
-							<source class='hide-by-default show-element' srcset='{{carousel_next}}' media='(min-width:0)'></source>
-							<img tabindex="0" srcset='{{carousel_next}}' class="carousel-button carousel-next" data-desktop-class="carousel-button carousel-next"
-							 md:payloadguid="{{carousel_next}}" alt="{{carousel_next_alt}}" src="{{carousel_next}}" title="next">
-						</picture>
+						<button tabindex="0" aria-label="view previous slide" class="carousel-button carousel-prev mediaCarNavArrows" data-desktop-class="carousel-button carousel-prev">
+							<picture>
+								<source class='hide-by-default show-element' srcset='{{carousel_prev-Min-1779px}}' media='(min-width:1779px)'></source>
+								<source class='hide-by-default show-element' srcset='{{carousel_prev-Min-1400px}}' media='(min-width:1400px)'></source>
+								<source class='hide-by-default show-element' srcset='{{carousel_prev-Min-1084px}}' media='(min-width:1084px)'></source>
+								<source class='hide-by-default show-element' srcset='{{carousel_prev-Min-768px}}' media='(min-width:768px)'></source>
+								<source class='hide-by-default show-element' srcset='{{carousel_prev}}' media='(min-width:540px)'></source>
+								<source class='hide-by-default show-element' srcset='{{carousel_prev}}' media='(min-width:0)'></source>
+								<img  srcset='{{carousel_prev}}' md:payloadguid="{{carousel_prev}}" alt="{{carousel_prev_alt}}" src="{{carousel_prev}}" title="previous">
+							</picture>
+						</button>
+						<button  aria-label="view next slide" class="carousel-button carousel-next mediaCarNavArrows" data-desktop-class="carousel-button carousel-next">
+							<picture role="button">
+								<source class='hide-by-default show-element' srcset='{{carousel_next-Min-1779px}}' media='(min-width:1779px)'></source>
+								<source class='hide-by-default show-element' srcset='{{carousel_next-Min-1400px}}' media='(min-width:1400px)'></source>
+								<source class='hide-by-default show-element' srcset='{{carousel_next-Min-1084px}}' media='(min-width:1084px)'></source>
+								<source class='hide-by-default show-element' srcset='{{carousel_next-Min-768px}}' media='(min-width:768px)'></source>
+								<source class='hide-by-default show-element' srcset='{{carousel_next}}' media='(min-width:540px)'></source>
+								<source class='hide-by-default show-element' srcset='{{carousel_next}}' media='(min-width:0)'></source>
+								<img  srcset='{{carousel_next}}' md:payloadguid="{{carousel_next}}" alt="{{carousel_next_alt}}" src="{{carousel_next}}" title="next">
+							</picture>
+						</button>
 					</div>
 					<input type="hidden" value="{{play_button_image}}">
 					<input type="hidden" value="{{play_button_image_alt}}">
@@ -377,10 +378,6 @@
 							</div>-->
 						</div>
 					</div>
-
-
-
-
 				</div>
 			</div>
 		</div>
